--- a/projectsocket/.settings/org.eclipse.wst.common.component
+++ b/projectsocket/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="projectsocket">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="projectsocket"/>
         <property name="java-output-path" value="/projectsocket/target/classes"/>
     </wb-module>
