--- a/projectsocket/.settings/org.eclipse.wst.common.component
+++ b/projectsocket/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/jni"/>
         <property name="context-root" value="projectsocket"/>
         <property name="java-output-path" value="/projectsocket/target/classes"/>
     </wb-module>
